--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 
 <div id="statusBar" class="status-bar">
- 
+ <div class="status-bar">
+  <span>Créditos: ...</span>
+  <span>Desbloqueadas: ...</span>
+  <span>Premium: ...</span>
+</div>
   <div id="statusHint" class="status-hint"></div>
 </div>
 	
