--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<!-- PRELOADER -->
+<!-- PRELOADER 
     <div class="preloader" id="preloader">
         <div class="preloader-logo">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
@@ -24,7 +24,7 @@
         <p class="preloader-text">Carregando receitas deliciosas...</p>
     </div>
 
-
+-->
   
   <div id="app">
     <!-- Header -->
