--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Mynutriflow - Receitas Fit Premium</title>
   <link rel="stylesheet" href="css/styles.css" />
   
-  <!-- ADICIONE ISTO AQUI -->
+  <!-- ADICIONE ISTO AQUI
   <style>
     #premium-btn { 
       display: none !important; 
@@ -15,6 +15,8 @@
       display: block !important; 
     }
   </style>
+
+   -->
 </head>
 
 <body>
