--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
           </div>
 
           <div class="header-actions">
+            
+
+            <!--
             <div id="credits-badge" class="badge">
               <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
@@ -94,7 +97,13 @@
               </svg>
               <span id="credits-text">0 créditos</span>
             </div>
+          -->
 
+            <div id="credits-badge" class="badge">
+            <!-- JavaScript vai preencher aqui -->
+           </div>
+
+            
             <button id="premium-btn" class="btn-premium">Ativar Premium</button>
           </div>
         </div>
