--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
 
             
 <div id="credits-badge" class="badge">
-  <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-    
+  <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+    <circle cx="12" cy="12" r="3"></circle>
   </svg>
-  <span></span>
+  <span>3 créditos</span>
 </div>
 
             <button id="premium-btn" class="btn-premium">Ativar Premium</button>
