--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                 <line x1="6" y1="17" x2="18" y2="17"/>
               </svg>
             </div>
-            <h1><span class="logo-my">My</span><span class="logo-nutri">nutri</span><span class="logo-flow">flow</span></h1>
+            
+            <h1><span class="logo-receita">Receita</span><span class="logo-fit">Fit</span></h1>
           </a>
 
           <div class="search-container">
