--- a/index.html
+++ b/index.html
@@ -2,7 +2,25 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+
+  <!-- Meta Tags -->
+  <meta name="description" content="ReceitaFit - Receitas fitness com macros detalhados, calculadora de calorias e planejador semanal. Transforme sua alimentação!">
+  <meta name="keywords" content="receitas fit, receitas fitness, dieta, macros, proteína,低caloria, receitas saudáveis">
+  <meta name="author" content="ReceitaFit">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Open Graph (Facebook/WhatsApp) -->
+  <meta property="og:title" content="ReceitaFit - Receitas Fitness Premium">
+  <meta property="og:description" content="40+ receitas fitness com informações nutricionais completas">
+  <meta property="og:image" content="https://receitafit.app/og-image.jpg">
+  <meta property="og:url" content="https://receitafit.app">
+  
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="ReceitaFit">
+  <meta name="twitter:description" content="Receitas fitness com macros detalhados">
+  
   <title>Receitafit.App - Receitas Fit Premium</title>
   <link rel="stylesheet" href="css/styles.css" />
 
