--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </svg>
             </div>
             
-            <h1><span class="logo-receita">Receita</span><span class="logo-fit">Fit</span><span class="logo-fit">.App</span></h1>
+            <h1><span class="logo-receita">Receita</span><span class="logo-fit">Fit</span><span class="logo-app">.App</span></h1>
            
           </a>
 
