--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <!-- Lucide Icons CDN -->
 <script src="https://unpkg.com/lucide@latest"></script>
   
+  
 </head>
 
 <body>
@@ -341,5 +342,18 @@
   <!-- Scripts -->
   <script src="js/data.js"></script>
   <script src="js/app.js"></script>
+
+
+  <!-- Modal de Notificação -->
+<div id="notification-modal" class="modal hidden">
+  <div class="modal-overlay"></div>
+  <div class="modal-content-small">
+    <h3 id="notification-title" class="modal-title">Sucesso!</h3>
+    <p id="notification-message" class="modal-text"></p>
+    <button class="btn-primary" onclick="closeNotification()">OK</button>
+  </div>
+</div>
+
+  
 </body>
 </html>
