--- a/index.html
+++ b/index.html
@@ -402,6 +402,20 @@
   </div>
 </div>
 
+<!-- Confirm Modal -->
+<div id="confirm-modal" class="modal hidden">
+  <div class="modal-content" style="max-width: 420px;">
+    <h3 class="confirm-title" style="margin:0 0 10px 0;">Confirmar</h3>
+    <p class="confirm-message" style="margin:0 0 16px 0; opacity:.9;"></p>
+
+    <div style="display:flex; gap:10px; justify-content:flex-end;">
+      <button class="confirm-no btn-secondary">Cancelar</button>
+      <button class="confirm-yes btn-primary">Confirmar</button>
+    </div>
+  </div>
+</div>
+
+  
   
 </body>
 </html>
