--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
     <p class="confirm-message" style="margin:0 0 16px 0; opacity:.9;"></p>
 
     <div style="display:flex; gap:10px; justify-content:flex-end;">
-      <button class="confirm-no btn-secondary">Cancelar</button>
-      <button class="confirm-yes btn-primary">Confirmar</button>
+      <button class="confirm-no btn-secondary">Não</button>
+      <button class="confirm-yes btn-primary">Sin</button>
     </div>
   </div>
 </div>
