--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     <header id="header">
       <div class="container">
         <div class="header-content">
-          <a href="index.html" class="logo" style="text-decoration:none; display:flex; align-items:center; gap:0.75rem;">
-            <div class="logo-icon">
+          <a href="index.html" class="logo tap" style="text-decoration:none; display:flex; align-items:center; gap:0.75rem;">
+            <div class="logo-icon tap">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
                 <path d="M6 13.87A4 4 0 0 1 7.41 6a5.11 5.11 0 0 1 1.05-1.54 5 5 0 0 1 7.08 0A5.11 5.11 0 0 1 16.59 6 4 4 0 0 1 18 13.87V21H6Z"/>
                 <line x1="6" y1="17" x2="18" y2="17"/>
               </svg>
             </div>
             
-            <h1><span class="logo-receita">Receita</span><span class="logo-fit">fit.</span><span class="logo-app">App</span></h1>
+            <h1><span class="logo-receita tap">Receita</span><span class="logo-fit tap">fit.</span><span class="logo-app tap">App</span></h1>
            
           </a>
 
