--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
         </div>
 
         <div class="modal-actions">
-          <button id="modal-cancel tap" class="btn-secondary">Agora não</button>
-          <button id="modal-activate tap" class="btn-primary">Ativar Premium</button>
+          <button id="modal-cancel" class="btn-secondary">Agora não</button>
+          <button id="modal-activate" class="btn-primary">Ativar Premium</button>
         </div>
 
         <div class="premium-footer">
