--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<script defer data-domain="receitafit.app" src="https://plausible.io/js/script.js"></script>
+<!-- <script defer data-domain="receitafit.app" src="https://plausible.io/js/script.js"></script> -->
  
 </script>
   
