--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       </svg>
     </button>
     
-    <h3 class="modal-title">Quando você vai comer esta refeição?</h3>
+    <h3 class="modal-title">Qual o horário desta refeição?</h3>
     <p class="modal-subtitle" id="meal-selector-subtitle"></p>
     
     <div class="meal-selector-options">
