--- a/quem-somos.html
+++ b/quem-somos.html
@@ -515,11 +515,12 @@
       <div class="hamburger-content">
         <div class="hamburger-header">
           <div class="hamburger-logo">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="hamburger-logo-icon">
-              <path d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2M7 7V2M17 2v7c0 1.1.9 2 2 2h4a2 2 0 0 0 2-2V2M21 7V2"/>
-            </svg>
-            <span>Receita<span style="color: #16a34a;">fit.</span><span class="logo-app">App</span></span>
-          </div>
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                           <path d="M6 13.87A4 4 0 0 1 7.41 6a5.11 5.11 0 0 1 1.05-1.54 5 5 0 0 1 7.08 0A5.11 5.11 0 0 1 16.59 6 4 4 0 0 1 18 13.87V21H6Z"/>
+                           <line x1="6" y1="17" x2="18" y2="17"/>
+                        </svg>
+                  <span>Receitafit<span style="color: #16a34a;">.App</span></span>
+               </div>
           <button class="hamburger-close tap" onclick="closeHamburgerMenu()" aria-label="Fechar menu">
             <i data-lucide="x"></i>
           </button>
