--- a/index.html
+++ b/index.html
@@ -471,6 +471,30 @@
       </button>
 
 
+
+<!-- Planner Dropdown (Tab bar Planner) -->
+<div class="planner-dropdown hidden" id="planner-dropdown">
+  <div class="planner-dropdown-overlay" onclick="closePlannerDropdown()"></div>
+
+  <div class="planner-dropdown-content">
+    <button class="planner-dropdown-item tap" onclick="openCalorieCalculator()">
+      <i data-lucide="calculator" class="planner-dropdown-icon"></i>
+      <span>Calculadora de Calorias</span>
+    </button>
+
+    <button class="planner-dropdown-item tap" onclick="openShoppingList()">
+      <i data-lucide="shopping-cart" class="planner-dropdown-icon"></i>
+      <span>Lista de Compras</span>
+    </button>
+
+    <button class="planner-dropdown-item tap" onclick="openWeekPlanner()">
+      <i data-lucide="calendar-days" class="planner-dropdown-icon"></i>
+      <span>Planejador Semanal</span>
+    </button>
+  </div>
+</div>
+
+
       <!-- Scripts -->
 <script src="js/ui-components.js"></script>
 <script src="js/data.js"></script>
