--- a/index.html
+++ b/index.html
@@ -474,15 +474,14 @@
 
 
 
+<!-- Componentes dinâmicos -->
+<div id="rf-hamburger-root"></div>
+<div id="rf-tabbar-root"></div>
 
-      <!-- Scripts -->
+<!-- Scripts -->
 <script src="js/ui-components.js"></script>
 <script src="js/data.js"></script>
 <script src="js/app.js"></script>
-
-	  
-<div id="rf-hamburger-root"></div>
-<div id="rf-tabbar-root"></div>
 
 </body>
 </html>
