--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 <div id="rf-tabbar-root"></div>
 
 <!-- Scripts -->
-<script src="js/ui-components.js"></script>
+<script src="js/ui-components.js?v=1"></script>
 <script src="js/data.js"></script>
 <script src="js/app.js"></script>
 
