--- a/quem-somos.html
+++ b/quem-somos.html
@@ -597,14 +597,14 @@
     });
   </script>
   
+<!-- Componentes dinâmicos -->
+<div id="rf-hamburger-root"></div>
+<div id="rf-tabbar-root"></div>
+
 <!-- Scripts -->
 <script src="js/ui-components.js"></script>
 <script src="js/data.js"></script>
 <script src="js/app.js"></script>
 
-
-<div id="rf-hamburger-root"></div>
-<div id="rf-tabbar-root"></div>
- 
 </body>
 </html>
