--- a/index.html
+++ b/index.html
@@ -142,6 +142,51 @@
                </div>
             </div>
          </header>
+		 
+		 
+	
+	
+	
+	
+	
+
+	
+ <section class="hero-banner">
+  <div class="hero-content">
+    <h1>Comer bem não precisa ser complicado</h1>
+    <p>
+      Organize suas refeições, entenda seu corpo
+      e tire o peso das decisões do dia a dia.
+    </p>
+
+    <!-- botão só para usuários Free -->
+    <button id="open-tour-btn" class="hero-btn">
+      Como funciona o Premium
+    </button>
+  </div>
+</section>
+
+<!-- MODAL / TOUR -->
+<div id="tour-modal" class="tour-overlay hidden">
+  <div class="tour-box">
+    <button id="tour-close" class="tour-close">✕</button>
+
+    <div class="tour-text" id="tour-text"></div>
+
+    <div class="tour-controls">
+      <button id="tour-prev" class="tour-nav">Voltar</button>
+      <button id="tour-next" class="tour-nav">Próximo</button>
+    </div>
+  </div>
+</div>
+
+		 
+	
+
+
+
+	
+		 
          <!-- SLIDER HERO FULL-WIDTH -->
          <div class="hero-slider-fullwidth" id="heroSlider">
             <div class="slider-track-new" id="sliderTrack"></div>
