--- a/index.html
+++ b/index.html
@@ -53,8 +53,31 @@
            }
          })();
       </script>
-      <!-- Lucide Icons CDN -->
-      <script src="https://unpkg.com/lucide@latest"></script>
+  
+
+
+
+
+
+  
+<!-- Lucide (já existe no seu projeto) -->
+<script src="https://unpkg.com/lucide@latest"></script>
+
+<!-- Font Awesome (gratuito, CDN) -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
+	
+
+
+	
+	  
+	  
    </head>
    <body>
       <div id="app">
