--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	  <!-- 👇FAVICON -->
 	  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	  <link rel="shortcut icon" href="/favicon.ico" />
-	  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+	  <link rel="shortcut icon" href="image/favicon.ico" />
+	  <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png" />
 	  <meta name="apple-mobile-web-app-title" content="ReceitaFit" />
-	  <link rel="manifest" href="/site.webmanifest" />
+	  <link rel="manifest" href="image/site.webmanifest" />
 	  
       <!-- 👇 SCRIPT QUE RODA ANTES DE TUDO -->
       <script>
@@ -60,6 +60,10 @@
  
   <!-- Lucide Icons -->
 <script src="https://unpkg.com/lucide@latest"></script>
+
+<!-- Font Awesome (fallback) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  
 
   
 	  
