--- a/index.html
+++ b/index.html
@@ -156,18 +156,6 @@
          </header>
 		 
 		 
-	
-	
-	
-	
-	
-
-	
-
-
-
-	
-		 
          <!-- SLIDER HERO FULL-WIDTH -->
          <div class="hero-slider-fullwidth" id="heroSlider">
 		 
@@ -175,6 +163,8 @@
 <button id="open-tour-btn" class="hero-btn hero-btn--overlay" type="button">
   Como funciona o Premium
 </button>
+
+
 
 <!-- Card do Tour (fica sobre o banner, só aparece quando abrir) -->
 <div id="tour-card" class="tour-card hidden" role="dialog" aria-modal="true">
@@ -451,8 +441,8 @@
             <h3 class="confirm-title" style="margin:0 0 10px 0;">Confirmar</h3>
             <p class="confirm-message" style="margin:0 0 16px 0; opacity:.9;"></p>
             <div style="display:flex; gap:10px; justify-content:flex-end;">
-               <button class="confirm-no btn-secondary tap">Não, prefiro confirmar</button>
-               <button class="confirm-yes btn-primary tap">Sim, tenho certeza</button>
+               <button class="confirm-no btn-secondary tap">Não</button>
+               <button class="confirm-yes btn-primary tap">Sim</button>
             </div>
          </div>
       </div>
