--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <!-- Font Awesome (fallback) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   
-
+<script src="https://sdk.mercadopago.com/js/v2"></script>
   
 	  
    </head>
