--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
    <!-- <script defer data-domain="receitafit.app" src="https://plausible.io/js/script.js"></script> -->
    </script>
-   <head>  
+   <head>
       <meta charset="UTF-8" />
       <!-- Meta Tags -->
       <meta name="description" content="ReceitaFit - Receitas fitness com macros detalhados, calculadora de calorias e planejador semanal. Transforme sua alimentação!">
@@ -64,7 +64,7 @@
 <!-- Font Awesome (fallback) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   
-<script src="https://sdk.mercadopago.com/js/v2"></script>
+
   
 	  
    </head>
@@ -138,7 +138,7 @@
 					 
 					 
                      <button id="premium-btn" class="btn-premium tap" onclick="openPremiumModal('header')">
-					  Ativar Premium
+					  Ativar Premium Denis
 					 </button>
   
 
