--- a/index.html
+++ b/index.html
@@ -348,20 +348,10 @@
                <div class="premium-footer">
                   <p class="premium-footer-text">Ainda não tem um código?</p>
                   <div class="premium-links">
-                     <a class="premium-link whatsapp" href="https://wa.me/5511999999999?text=Quero%20virar%20Premium%20no%20receitafit.app!" target="_blank" rel="noreferrer">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-                           <path d="M22 16.92V21a1 1 0 0 1-1.09 1A19.8 19.8 0 0 1 3 5.09 1 1 0 0 1 4 4h4.09a1 1 0 0 1 1 .75l1.14 4.57a1 1 0 0 1-.27.95l-2.2 2.2a16 16 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 .95-.27l4.57 1.14a1 1 0 0 1 .75 1z"/>
-                        </svg>
-                        WhatsApp
-                     </a>
-                     <a class="premium-link instagram" href="https://instagram.com/receitafit.app" target="_blank" rel="noreferrer">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-                           <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
-                           <path d="M16 11.37a4 4 0 1 1-7.88 1.26 4 4 0 0 1 7.88-1.26z"/>
-                           <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
-                        </svg>
-                        Instagram
-                     </a>
+                     
+                     <button onclick="openPremiumCheckout('premium-monthly')" class="btn-premium">
+  💳 Pagar com Mercado Pago - R$ 37/mês
+</button>
                   </div>
                </div>
             </div>
